tests/rascal/negative/name_errors/L1/4_undecl-const.ob
MODULE Bla;

CONST
  x = Y;

VAR
  x: X;

BEGIN
  x := 1
END Bla.